[project]
name = "boosty-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "mylittletraf",email = "kanviser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
